--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,7 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+# Enable Gradle configuration cache
+org.gradle.configuration-cache=true
+# Use Android Studio's JDK
+org.gradle.java.home=/opt/android-studio/jbr
